--- a/newyear/index.html
+++ b/newyear/index.html
@@ -83,7 +83,10 @@
             <div class="loading-init__status"></div>
         </div>
         <div class="stage-container remove">
-
+            <div class="page_two hide">
+                <div id="text" style="display:none;">当当，当当，Surprise，惊不惊喜呐？<br>🎁 准备好了吗？跟我一起，跨向2023吧！！！🎊 🎊 <br>  🎀 快听快听，新年的钟声马上敲响了，快许愿吧，祝老师，2023年全糖去冰，永远美美哒❤️<br>🎀 旧年终于过去，夕阳终于归海，老师一定要每天快乐🌸 <br>🎀 年年皆胜意，岁岁皆欢愉🎉 🎉 🎉 🎉 <br>🎀 希望你永远可以相信，远方的灯光总会照亮世界🎉 <br>🤑 过往皆为序章，🤑 将来皆为可盼<br>🍓 笑眼看星光璀璨，🍓 歌舞欢辞旧迎新，<br>💕 鞭炮响起地欢天，💕 巨龙飞五洲皆赞，<br>🐷  举杯饮饮庆元旦，🐷 问候声声迎新年<br>  🎉  2023年再展雄风， 🎉   再创佳绩🍓 <br><br><br>🎀 祝愿前方光芒万丈，后方温暖一方💖 💖 <br>当然啦，几岁不重要，岁岁平安才重要，在这个普普通通的周6和2022年告别吧！🎉 🎉 🎉 🎉 🎉 <br><br>🍓 ＂新的一年充满期待，要把喜欢充满口袋＂<br>🍓     希望今年的遗憾是明年的欣喜<br>    愿新年 胜旧日<br>🤗 ＂平安喜樂萬事如意祝你祝我们＂<br>  🎉  顺<br>     万事顺意<br>     百事可乐   <br>  🎉 汪<br>     年年欢愉 <br><br>       <br>    烟花散放，快许愿吧！Happy new year 's day！</div>
+                <div class="type_words" id="contents" style="font-size:1.15rem;line-height:1.5rem;"></div>
+            </div>
             <div class="canvas-container">
                 <canvas id="trails-canvas"></canvas>
                 <canvas id="main-canvas"></canvas>
